# 2020_competition

./: README.md  robot_utils.py  robot_utils2 (copy).py
dtwenty_competition/: CMakeLists.txt  package.xml  test_temp.py
dtwenty_competition/launch/: baxter_control_service.launch
dtwenty_competition/param/: robot_param.yaml
dtwenty_competition/scripts/: moveit.py  robot_utils.py  robot_utils2.py  task.py  taskA (copy).py  taskA.py  taskB.py  taskC.py  taskC1.py  taskC2.py  test.py  tracking.py
image_proc/: CMakeLists.txt  package.xml
image_proc/include/: wrist.h
image_proc/launch/: image_process.launch
image_proc/param/: svm.xml  svm_h.xml
image_proc/src/: image_proc_node.cpp  image_proc_node_1.cpp  image_proc_node_bk.cpp  image_proc_nodebk2.cpp  wrist.cpp
image_proc_msg/: CMakeLists.txt  package.xml
image_proc_msg/msg/: ImageProcMsg.msg
image_proc_msg/srv/: ImageProcSrv.srv
robot_utils/: initialize.py
